RESOLVED FIXED134436
[EFL] Fix occurrence of two cursors on WK2 EFL
https://bugs.webkit.org/show_bug.cgi?id=134436
Summary [EFL] Fix occurrence of two cursors on WK2 EFL
KwangHyuk
Reported 2014-06-29 09:04:14 PDT
Created attachment 234060 [details] Patch for fixing occurrence of two cursor images on WK2 EFL. Currently I could notice two different cursor images when I used WK2 EFL's mini browser whenever mouse cursor gets into the banner area on the google.com site. In addition, there are similar issues on other sites too. This patch is just for allowing only one cursor image for WK2 EFL.
Attachments
Patch for fixing occurrence of two cursor images on WK2 EFL. (1.19 KB, patch)
2014-06-29 09:04 PDT, KwangHyuk
no flags
Add bug id to Changelog. (1.25 KB, patch)
2014-06-29 09:30 PDT, KwangHyuk
gyuyoung.kim: review-
Update the patch according to reviewer's comment. (1.25 KB, patch)
2014-06-30 08:26 PDT, KwangHyuk
andersca: review+
Update changelog. (1.29 KB, patch)
2014-07-01 10:52 PDT, KwangHyuk
no flags
Apply reviewer's comment. (1.29 KB, patch)
2014-07-01 21:06 PDT, KwangHyuk
no flags
WebKit Commit Bot
Comment 1 2014-06-29 09:06:31 PDT
Attachment 234060 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
KwangHyuk
Comment 2 2014-06-29 09:30:14 PDT
Created attachment 234061 [details] Add bug id to Changelog. Add bug id to Changelog.
Ryuan Choi
Comment 3 2014-06-29 17:51:29 PDT
Comment on attachment 234061 [details] Add bug id to Changelog. View in context: https://bugs.webkit.org/attachment.cgi?id=234061&action=review > Source/WebKit2/ChangeLog:5 > + ecore_x_window_cursor is released when ecore_evas_object_cursor should be shown in order to avoid occurrence of two cursors. This comment should be below of "Reviewed by NOBODY..." > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:473 > + ecore_x_window_cursor_set(getEcoreXWindow(ecoreEvas), 0); At least, it should be in the guard #ifdef HAVE_ECORE_X
Gyuyoung Kim
Comment 4 2014-06-29 18:30:04 PDT
Comment on attachment 234061 [details] Add bug id to Changelog. View in context: https://bugs.webkit.org/attachment.cgi?id=234061&action=review r- because of comments. > Source/WebKit2/ChangeLog:3 > + Fix occurrence of two cursors on WK2 EFL. Please add [EFL] prefix in bug title.
KwangHyuk
Comment 5 2014-06-30 08:26:48 PDT
Created attachment 234078 [details] Update the patch according to reviewer's comment.
KwangHyuk
Comment 6 2014-07-01 10:52:24 PDT
Created attachment 234173 [details] Update changelog. Update "reviewed by" to Changelog.
Gyuyoung Kim
Comment 7 2014-07-01 18:22:56 PDT
Comment on attachment 234173 [details] Update changelog. View in context: https://bugs.webkit.org/attachment.cgi?id=234173&action=review > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:472 > // ecore_evas takes care of freeing the cursor object. Move this comment to 475 line as below. #ifdef HAVE_ECORE_X ecore_x_window_cursor_set(getEcoreXWindow(ecoreEvas), 0); #endif // ecore_evas takes care of freeing the cursor object. ecore_evas_object_cursor_set(ecoreEvas, cursorObject.release(), EVAS_LAYER_MAX, hotspotX, hotspotY);
KwangHyuk
Comment 8 2014-07-01 21:06:41 PDT
Created attachment 234238 [details] Apply reviewer's comment.
KwangHyuk
Comment 9 2014-07-01 21:07:25 PDT
> Move this comment to 475 line as below. Done. :)
WebKit Commit Bot
Comment 10 2014-07-01 21:49:56 PDT
Comment on attachment 234238 [details] Apply reviewer's comment. Clearing flags on attachment: 234238 Committed r170696: <http://trac.webkit.org/changeset/170696>
WebKit Commit Bot
Comment 11 2014-07-01 21:50:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.