[EFL] Fix occurrence of two cursors on WK2 EFL. https://bugs.webkit.org/show_bug.cgi?id=134436

Patch by KwangHyuk Kim <hyuki.kim@samsung.com> on 2014-07-01
Reviewed by Anders Carlsson.

ecore_x_window_cursor is released when ecore_evas_object_cursor should be shown in order to avoid occurrence of two cursors.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::updateCursor):

Canonical link: https://commits.webkit.org/152524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170696 268f45cc-cd09-0410-ab3c-d52691b4dbfc